data/derived/comb/progs/unify/prog6057.ml.out
Characters 112-162:
  |(r,v) -> let sum =  int_of_string (sepConcat "" ((mulByDigit (int_of_string (sepConcat "" l1)) s))) in if (sum + r) > 9 then ((sum + r) / 10,((sum+r) mod 10)::v) else  (0, ((sum+r) mod 10)::v)
                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type string list
       Type int is not compatible with type string 
